# HousePricesPredictions

./: .gitignore  CrossValidation.ipynb  DataCleanAfterEDA.ipynb  EDA.ipynb  EDA_Notes.md  README.md  Untitled.ipynb  cross_validation.py  data_prep.py  main.py  pyproject.toml
.github/: pull_request_template.md
documentation/: EDA_Notes.md
predict_prices/: Untitled.ipynb  cross_validation.py  data_load.py  data_prep.py  hyperparameter_tuning.py  main.py
