[tool.poetry]
name = "housepricespredictions"
version = "0.1.0"
description = ""
authors = ["TonyLouwagie <tony.louwagie@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^2.0.1"
scikit-learn = "^1.5.1"
scikit-optimize = "^0.10.2"
xgboost = "^2.1.1"
lightgbm = "^4.5.0"
mypy = "^1.11.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"
jupyterlab = "^4.2.5"
pandera = "^0.21.0"


[tool.poetry.group.eda.dependencies]
matplotlib = "^3.9.1"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
